tests/ui/macros/feature-gate-expr_fragment_specifier_2024.stderr
error[E0658]: fragment specifier `expr_2021` is unstable
  --> $DIR/feature-gate-expr_fragment_specifier_2024.rs:4:6
   |
LL |     ($e:expr_2021) => {
   |      ^^^^^^^^^^^^
   |
   = note: see issue #123742 <https://github.com/rust-lang/rust/issues/123742> for more information
   = help: add `#![feature(expr_fragment_specifier_2024)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
